DesignProject/tests/error/error08_invalid_array_syntax.src
// Error test: Invalid array syntax - missing brackets
// Expected: Syntax error - invalid array declaration syntax

func test() => integer {
  local arr integer 10;
  return (0);
}

